--- a/style.css
+++ b/style.css
@@ -1,90 +1,168 @@
-*
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+.titulo
 {
-    margin: 0; 
-    padding: 0;
+    background-color: #666666;
+    font-family:Roboto, sans-serif;
 }
 
-body
-{
-    font-family: 'Times New Roman', Times, serif;
-    background-color: coral;
-}
-header
-{
-    width: 90%;
-    background-color: rgb(87, 54, 5);
-    color: wheat;
-    margin-right: auto;
-    margin-left: auto;
+.animated-title {
+    display: flex;
+    align-items: center; 
+    font-size: 2rem; 
 }
 
-nav
-{
-    width: 100%;
-    height: 160px;
-    background-color: aqua;
-    color: cornflowerblue;
-    text-align: end;
-    padding: 20px 0;
+.curza-logo {
+    width: 70px; 
+    height: auto; 
+    margin-left: 70px; 
+    animation: spin 2s linear infinite; 
 }
 
-h1
+@keyframes spin {
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(180deg);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
+}
+
+.sticky-article
 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 2em;
+    max-height: 300px;
+    overflow-y: auto;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.sticky-header
+{
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
+    padding: 5px 0;
+}
+
+.back-to-top 
+{
+    position: fixed;
+    bottom: 20px; 
+    right: 20px; 
+    width: 50px;
+    height: 50px;  
+    background-color: #007BFF; 
+    color: white;
+    border-radius: 50%; 
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    text-decoration: none; 
+    font-size: 24px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s; 
+}
+
+.back-to-top:hover 
+{
+    background-color: #0056b3;
+}
+
+* 
+{
     margin: 0;
     padding: 0;
-    padding-top: 15px;
 }
 
-h2
+body 
 {
-    font-family: cursive;
-    font-size: 25px;
-    color: brown;
-    margin: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: rgb(98, 99, 65);
+    line-height: 1.6;
+    padding-top: 120px;
 }
 
-h2
+main 
 {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: larger;
-    color: blueviolet;
-    margin: 10px;
+    margin-top: 20px;
 }
 
-nav ul
+
+header 
 {
-    list-style-type: decimal;
+    width: 20%;
+    color: wheat;
+    margin: 0 auto;
+    padding: 15px 0;
 }
 
-nav li
+nav 
 {
-    float: left;
+    width: 75%;
+    color: cornflowerblue;
+    text-align: end;
+    padding: 50px 0;
+}
+
+nav ul 
+{
+    list-style-type: none;
+    padding: 0;
+}
+
+nav li 
+{
+    display: inline;
     margin-right: 10px;
 }
 
-a
+nav a 
 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: inline-flex;
     font-size: 20px;
     background-color: antiquewhite;
-    color: blue;
+    color: rgb(23, 200, 67);
     padding: 10px;
-    border: 4px;
-    text-decoration: solid;
-    cursor: auto;
+    border: 2px solid transparent;
+    text-decoration: none;
+    transition: background-color 0.3s, border 0.3s; 
 }
 
-main
+nav a:hover 
+{
+    background-color: rgb(164, 24, 108); 
+    border: 2px solid rgb(183, 214, 25); 
+}
+
+h1 
+{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 2em;
+    margin: 0;
+    padding-top: 15px;
+}
+
+h2 
+{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 25px;
+    color: rgb(255, 248, 45);
+    margin: 10px;
+}
+
+main 
 {
     background-color: aqua;
     text-align: center;
     padding: 10px;
 }
 
-main img
+main img 
 {
     width: 300px;
     border-radius: 8px;
@@ -92,14 +170,14 @@ main img
     box-shadow: 4px 1px white;
 }
 
-footer
+footer 
 {
     background-color: chartreuse;
-    text-decoration: none;
-    padding: 15px;
+    padding: 20px;
+    text-align: center;
 }
 
-footer p
+footer p 
 {
     color: black;
     font-family: 'Courier New', Courier, monospace;
